style.css
/* ... */
/*we are using the mobile-first approach, which means that from here on the code is for the mobile, and the specifications for desktop are gonna be contained in the media query*/

a {
    color: black;
    text-decoration: none;
}

h1,
h2,
h3,
h4,
a {
    font-family: Simplifica;
}

span {
    font-weight: inherit;
    font-size: inherit;
}

h2 {
    font-weight: 100;
    font-size: 28px;

}

h4 {
    font-size: 19px;
}

.background {
    background: url(images/mobile-bgr.png) fixed bottom no-repeat;
    background-size: cover;
    width: 100vw;
    height: 90vh;
    position: absolute;
    bottom: 0;


}

.background h1 {
    font-size: 65px;
    font-weight: 200;
    width: 100vw;
    text-align: center;
    position: absolute;
    bottom: 200px;
}

.background h2 {
    position: absolute;
    bottom: 160px;
    right: 5vw;

}

/*header*/

header {
    background: white;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: 20;
}

.logo {
    width: 30px;
    float: right;
    padding: 1em;
}


/*navigation*/

.burger {
    width: 25px;
    padding: 1em;
}

.navMenu {
    width: 100%;
    height: 0vh;
    position: relative;
    overflow: hidden;
    background-color: white;
    z-index: 10;

}

nav {
    position: absolute;

}

nav a {
    color: black;
    text-decoration: none;
    display: block;
    padding-left: 2em;
    padding-bottom: .6em;
    font-size: 30px;


}

.lan {
    float: right;
    position: fixed;
    top: 15px;
    right: 80px;
    z-index: 20;
}

.lan button {
    font-size: 18px;
    font-weight: 100;

}

.closeNav {
    animation: closeNav .3s forwards ease;
}

.openNav {
    animation: openNav .3s forwards ease;
}

@keyframes closeNav {
    from {
        height: 43vh;
    }
    to {
        height: 0vh;
        margin-top: -30%;
    }
}

@keyframes openNav {
    to {
        height: 50vh;
    }
}

.timeline {
    position: relative;
}

.subMenu {
    position: absolute;
    left: 10vw;
    width: 50vw;
}

.subMenu:hover {
    height: 50vh;
}

.subMenu a {
    font-size: 26px;
}

/*home*/

.captionHome {
    position: absolute;
    bottom: -60px;
    left: 2vw;
    ;
    font-family: Sukhumvit, sans-serif;
}

div.captionHome h4 {
    font-family: Sukhumvit, sans-serif;
    font-size: 14px;

}

.captionHome p {
    color: #959595;
    font-size: 10px;

}

/*the art*/

main {
    margin-top: 8vh;
    padding-bottom: 5vw;
}

section {
    max-width: 91vw;
    height: 65vh;
    padding: 3vw;
    margin: 0;
}

section h1 span {
    padding-bottom: .25em;
    font-size: 30px;
    text-transform: capitalize;
}

section h4 {
    padding-bottom: 1em;

}

section p {
    padding-bottom: 1em;
    padding-top: 1em;
}

section span {
    font-size: 18px
}

div.more {
    float: right;
    padding-right: 5vw;
    margin: 10px;
    align-items: center;
    display: flex;
    font-size: 20px;
}

.more img {
    margin-left: 1vw;
}

.more:hover {
    text-decoration: underline;
}

.arrow {
    width: 10px
}

.gallery div.mainImg {
    position: relative;
    width: 90vw;
    height: 40vh;
    overflow: hidden;
}

div.mainImg img {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    margin-top: 2vh;
}

img.sculpture {
    max-width: 90vw;
    padding-bottom: .7em
}

div.centerMe {
    padding-top: 5vh;
    padding-left: 28vw;
    display: block;
}

h4.dimension {color:#959494;}
.centerMe img {
    max-width: 35vw;
}

/*subpage*/

button.inquire {
    border: 1px black solid;
    padding: 1vh;
    font-size: 20px;
    width: 20vw;
    color: #959494;
    font-family: Simplifica, sans-serif;
    margin-bottom: 2.5vh;


}

.gallery {
    position: relative;
    min-height: 40vh;
}

section.subPageS {
    height: auto;
}

/*modal*/

aside {
    background-color: white;
    position: fixed;
    left: 9vw;
    width: 70vw;
    height: 70vh;
    padding: 5vw;
    opacity:0;
    border: solid #bbbbbb 1px;
    z-index: 30;
    box-shadow: 10px 10px 10px rgba(255, 255, 255, .1);

}

.hideModal {
    animation: hideModal .5s forwards ease;
}

.showModal {
    animation: showModal .5s forwards ease;
}

@keyframes hideModal {

    to {
        top: -200vh;
    }
}

@keyframes showModal {
    from {
        top: -200vh;
        opacity:1;

    }
    to {
        top: 12vh;
    }
}

.quote {
    margin-top: 25px;
    font-family: Simplifica, sans-serif;
    font-size: 24px;
    font-weight: 100;
    padding-bottom: 2vh;
}

.personalMex {
    font-family: Sukhumvit-Bold;
    font-weight: 100;
    font-size: 15px;
    color: #959494;

}

.closeMe , .closeMeSlide{
    position: absolute;
    top: 10px;
    left: 20px;
    cursor: pointer;
}

form {
    margin-left: 3vw;
}

input {
    width: 60vw;
    height: 2.3em;
    margin-bottom: 1em;
}

input.message {
    height: 27vw;
}

button.submit {
    border: 1px black solid;
    padding: 1vh;
    font-size: 20px;
    color: #959494;
    font-family: Simplifica, sans-serif;
    margin-bottom: 2vh;
    float: right;

}

/*artist*/

.mobileArtist {
    background-image: url(images/gabriele-nicola-artists_boulevard-world-genius.jpg);
    background-size: contain;
    background-repeat: no-repeat;
    height: 43vh;
    width: 100%;
    position: relative;
    margin-bottom: 10vh;

}

.mobileArtist img {
    width: 15px;
    padding: .2em;
}

.mobileArtist img.play {
    width: 50px;
    position: absolute;
    bottom: 70px;
    left: 15vw;
}

.loc p,
.mail p {
    display: inline;
    font-size: 14px;
}

.mobileArtist div {
    padding-left: 10px;
    padding-bottom: .5em;
}

.mobileArtist div:nth-child(1) {
    padding-top: 4em;
}

div.caption {
    padding-bottom: 2em;
    padding-left: 5vw;
    padding-top: .5em;
    position: absolute;
    bottom: -90px;
}

.caption p {
    font-size: 13px;
}

.aboutContent {
    padding-top: 2vh;
}

.aboutContent p,
.aboutContent span {
    padding: 5vw;
    padding-top: 1vw;
}
/* ... */

